--- a/app/views/jobs/_form.html.haml
+++ b/app/views/jobs/_form.html.haml
@@ -1,4 +1,5 @@
 = simple_form_for(@job, html: { class: 'form-horizontal'}) do |f|
+	= f.collection_select :category_id, Category.all, :id, :name, {prompt: "Choose a category"}
 	= f.input :title, lable: "Job title"
 	= f.input :description, lable: "Job description"
 	= f.input :company, lable: "Your company"
