--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -15,3 +15,21 @@
  */
 @import "bootstrap-sprockets";
 @import "bootstrap";
+
+*{
+	box-sizing: border-box;
+}
+
+html {
+	height: 100%;
+}
+
+body {
+	height: 100%;
+	background: -webkit-linear-gradient(90deg, #1D976C 10%, #93F9B9);
+	background:    -moz-linear-gradient(90deg, #1D976C 10%, #93F9B9);
+	background:     -ms-linear-gradient(90deg, #1D976C 10%, #93F9B9);
+	background:      -o-linear-gradient(90deg, #1D976C 10%, #93F9B9);
+	background:        -linear-gradient(90deg, #1D976C 10%, #93F9B9);
+	font-family:'Lato', sans-serif;
+}
